[package]
name = "wordpathgame"
description = "Find paths across words"
version = "0.1.0"
edition = "2021"

[profile.release]
opt-level = 3
codegen-units = 1
lto = "fat"
panic = "abort"
debug = true

[dependencies]
anyhow = "1.0.82"
clap = { version = "4.5.4", features = ["derive"] }
fnv = "1.0.7"
memmap2 = "0.9.4"
